[package]
name = "mpi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Plonky2-lib = { git = "https://github.com/Orbiter-Finance/Plonky2-lib.git", branch = "aggregator", default-features = true }
mpi = "0.7"